--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="style.css" />
-  <script type="module" src="index.js"></script>
+  
 
   <title>Nekup to</title>
 </head>
@@ -49,19 +49,20 @@
           <p class="card-text">Nejlepší způsob jak zaujmout neotřelou módou v ulíčkách kolem Staroměstkého náměstí.</p>
 
         </div>
-        <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
+        <button id="knoflik" type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
 
       <div id="product3" class="card mb-4 box-shadow">
         <img class="card-img-top" src="images/anatoplavky.jpg" alt="Anatoplavky">
         <div class="card-body">
-          <h2 class="card-title">Anatoplavky</h2>
+          <h2 id="titulek" class="card-title">Anatoplavky</h2>
           <p class="card-text">Aby muži na rozpálených plážích kromě vašeho těla obdivovali také vaše nitro.</p>
         </div>
         <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
     </div>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
